edited css to include overflow rules to prevent long tweets from warping the page layout

--- a/public/styles/tweets.css
+++ b/public/styles/tweets.css
@@ -9,6 +9,8 @@ article.tweet {
     padding: 10px;
     box-sizing: border-box;
     margin-bottom: 20px;
+    max-height: 300px;
+    overflow: auto;
 }
 
 article.tweet header {
